Ensure compatibility with auto-boxing/-unboxing in JDK 6.
Additional minor simplifications and preparations for compatibility with
JDK >= 8 (avoid deprecation warnings), plus a number of JavaDoc
corrections.

Thanks for Christian Klemke (cklemkeberlin) for these changes. This
fixes some issues introduced in pull request #16 (commit 6ea712245e5).
See pull request #17 for discussion.